--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
-aiofauna==0.1.47
+aiofauna==0.1.57
 aiohttp==3.8.5
 aiohttp-sse==2.1.0
 aiosignal==1.3.1
 async-timeout==4.0.2
 attrs==23.1.0
 beautifulsoup4==4.12.2
-boto3==1.28.12
-botocore==1.31.12
+boto3==1.28.17
+botocore==1.31.17
 bs4==0.0.1
 certifi==2023.7.22
 charset-normalizer==3.2.0
-dataclasses-json==0.5.13
+click==8.1.6
+dataclasses-json==0.5.14
 dnspython==2.4.1
 email-validator==2.0.0.post2
 frozenlist==1.4.0
@@ -20,8 +21,8 @@ idna==3.4
 iso8601==1.1.0
 Jinja2==3.1.2
 jmespath==1.0.1
-langchain==0.0.244
-langsmith==0.0.14
+langchain==0.0.249
+langsmith==0.0.16
 lxml==4.9.3
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
@@ -30,7 +31,7 @@ mdurl==0.1.2
 multidict==6.0.4
 mypy-extensions==1.0.0
 numexpr==2.8.4
-numpy==1.25.1
+numpy==1.25.2
 openai==0.27.8
 openapi-schema-pydantic==1.2.4
 packaging==23.1
@@ -41,7 +42,7 @@ python-dotenv==1.0.0
 PyYAML==6.0.1
 regex==2023.6.3
 requests==2.31.0
-rich==13.4.2
+rich==13.5.2
 s3transfer==0.6.1
 six==1.16.0
 soupsieve==2.4.1
